setup less and added css to nav toolbar

--- a/blog.html
+++ b/blog.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/index.css">
     <title>Chris Jones - Blog</title>
 </head>
 <body>
-    <header>
+    <header class="nav-toolbar">
         <h1>Logo</h1>
-        <nav>
+        <nav class="nav-links">
             <a href="#">About</a>
             <a href="#">Projects</a>
             <a href="#">Blog</a>
             <a href="#">Contact</a>
         </nav>
-        <nav>
+        <nav class="social-links">
             <a href="#">Tw</a>
             <a href="#">Li</a>
             <a href="#">Gh</a>
