styled article header

--- a/blog.html
+++ b/blog.html
@@ -27,8 +27,10 @@
             <header>
                 <p>WELCOME</p>
                 <h2>What are you looking for?</h2>
-                <input type ="search" q="googlesearch">
-                <button>Search</button>
+                <div class="search-bar">
+                    <input type ="search" q="googlesearch">
+                    <button>Search</button>
+                </div>
                 <p>OR CHOOSE A CATEGORY</p>
                 <ul>
                     <li>
