styled article body

--- a/blog.html
+++ b/blog.html
@@ -134,21 +134,22 @@
                 </section>
             </div>      
         </article>
-        <footer>
+    </main>
+    <footer>
+        <footer class="nav-toolbar">
             <h1>Logo</h1>
-            <nav>
+            <nav class="nav-links">
                 <a href="#">About</a>
                 <a href="#">Projects</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
             </nav>
-            <nav>
+            <nav class="social-links">
                 <a href="#">Tw</a>
                 <a href="#">Li</a>
                 <a href="#">Gh</a>
             </nav>
             <P>Copright CJ 2019</P>
         </footer>
-    </main>
 </body>
 </html>
