finished html scaffolding of blog homepage and css

--- a/blog.html
+++ b/blog.html
@@ -8,15 +8,15 @@
     <title>Chris Jones - Blog</title>
 </head>
 <body>
-    <header class="nav-toolbar">
+    <header class="h-nav-toolbar">
         <h1>Logo</h1>
-        <nav class="nav-links">
+        <nav class="h-nav-links">
             <a href="#">About</a>
             <a href="#">Projects</a>
             <a href="#">Blog</a>
             <a href="#">Contact</a>
         </nav>
-        <nav class="social-links">
+        <nav class="h-social-links">
             <a href="#">Tw</a>
             <a href="#">Li</a>
             <a href="#">Gh</a>
@@ -34,122 +34,129 @@
                 <p>OR CHOOSE A CATEGORY</p>
                 <ul>
                     <li>
-                        <img src="#" alt="#">
-                        <p>Label 1</p>
+                        <img src="https://picsum.photos/id/347/150/120" alt="#">
+                        <p class="icon-label">Label 1</p>
                     </li>
                     <li>
-                        <img src="#" alt="#">
-                        <p>Label 1</p>
+                        <img src="https://picsum.photos/id/347/150/120" alt="#">
+                        <p class="icon-label">Label 1</p>
                     </li>
                     <li>
-                        <img src="#" alt="#">
-                        <p>Label 1</p>
+                        <img src="https://picsum.photos/id/347/150/120" alt="#">
+                        <p class="icon-label">Label 1</p>
                     </li>
                     <li>
-                        <img src="#" alt="#">
-                        <p>Label 1</p>
+                        <img src="https://picsum.photos/id/347/150/120" alt="#">
+                        <p class="icon-label">Label 1</p>
                     </li>
                     <li>
-                        <img src="#" alt="#">
-                        <p>Label 1</p>
+                        <img src="https://picsum.photos/id/347/150/120" alt="#">
+                        <p class="icon-label">Label 1</p>
                     </li>
                 </ul>
             </header>
             <div class="popular-articles">
                 <h3>Popular Articles</h3>
                 <section>
-                    <img src="#" alt="#">
+                    <img src="https://picsum.photos/id/347/370/210" alt="#">
                     <h4>Article Title</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
                 <section>
-                        <img src="#" alt="#">
+                        <img src="https://picsum.photos/id/347/370/210" alt="#">
                         <h4>Article Title</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
                 <section>
-                        <img src="#" alt="#">
+                        <img src="https://picsum.photos/id/347/370/210" alt="#">
                         <h4>Article Title</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
             </div>
             <aside>
-                <p>Get involved!</p>
-                <p>Subscribe to be notified of new blog posts</p>
-                <input type="email">
-                <button>Subscribe</button>
+                <div class="outer-container">
+                    <div class="left-container">
+                        <p>Get involved!</p>
+                        <p>Subscribe to be notified of new blog posts</p>
+                    </div>
+                    <div class="right-container">
+                        <input type="email">
+                        <button>Subscribe</button>
+                    </div>
+                </div>
             </aside>
             <div class="topic-one-articles">
                 <h3>Topic One Articles</h3>
                 <section>
-                    <img src="#" alt="#">
+                    <img src="https://picsum.photos/id/347/370/210" alt="#">
                     <h4>Article Title</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
                 <section>
-                        <img src="#" alt="#">
+                        <img src="https://picsum.photos/id/347/370/210" alt="#">
                         <h4>Article Title</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
                 <section>
-                        <img src="#" alt="#">
+                        <img src="https://picsum.photos/id/347/370/210" alt="#">
                         <h4>Article Title</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
             </div>
             <div class="topic-two-articles">
-                <h3>Topic One Articles</h3>
+                <h3>Topic Two Articles</h3>
                 <section>
-                    <img src="#" alt="#">
+                    <img src="https://picsum.photos/id/347/370/210" alt="#">
                     <h4>Article Title</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
                 <section>
-                        <img src="#" alt="#">
+                        <img src="https://picsum.photos/id/347/370/210" alt="#">
                         <h4>Article Title</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
                 <section>
-                        <img src="#" alt="#">
+                        <img src="https://picsum.photos/id/347/370/210" alt="#">
                         <h4>Article Title</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
             </div>
             <div class="topic-three-articles">
-                <h3>Topic Two Articles</h3>
+                <h3>Topic Three Articles</h3>
                 <section>
-                    <img src="#" alt="#">
+                    <img src="https://picsum.photos/id/347/370/210" alt="#">
                     <h4>Article Title</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
                 <section>
-                        <img src="#" alt="#">
+                        <img src="https://picsum.photos/id/347/370/210" alt="#">
                         <h4>Article Title</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
                 <section>
-                        <img src="#" alt="#">
+                        <img src="https://picsum.photos/id/347/370/210" alt="#">
                         <h4>Article Title</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
                 </section>
             </div>      
         </article>
     </main>
-    <footer>
-        <footer class="nav-toolbar">
+    <footer class="f-nav-toolbar">
+        <div class="f-nav-container">
             <h1>Logo</h1>
-            <nav class="nav-links">
+            <nav class="f-nav-links">
                 <a href="#">About</a>
                 <a href="#">Projects</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
             </nav>
-            <nav class="social-links">
+            <nav class="f-social-links">
                 <a href="#">Tw</a>
                 <a href="#">Li</a>
                 <a href="#">Gh</a>
             </nav>
-            <P>Copright CJ 2019</P>
-        </footer>
+        </div>
+        <P>Copright CJ 2019</P>
+    </footer>
 </body>
 </html>
