--- a/blog.html
+++ b/blog.html
@@ -11,9 +11,9 @@
     <header class="h-nav-toolbar">
         <h1>Logo</h1>
         <nav class="h-nav-links">
-            <a href="#">About</a>
+            <a href="index.html">About</a>
             <a href="#">Projects</a>
-            <a href="#">Blog</a>
+            <a href="blog.html">Blog</a>
             <a href="#">Contact</a>
         </nav>
         <nav class="h-social-links">
@@ -145,9 +145,9 @@
         <div class="f-nav-container">
             <h1>Logo</h1>
             <nav class="f-nav-links">
-                <a href="#">About</a>
+                <a href="index.html">About</a>
                 <a href="#">Projects</a>
-                <a href="#">Blog</a>
+                <a href="blog.html">Blog</a>
                 <a href="#">Contact</a>
             </nav>
             <nav class="f-social-links">
