--- a/blog.html
+++ b/blog.html
@@ -1,162 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Chris Jones - Blog</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="h-nav-toolbar">
-        <h1>Logo</h1>
-        <nav class="h-nav-links">
-            <a href="index.html">About</a>
-            <a href="#">Projects</a>
-            <a href="blog.html">Blog</a>
-            <a href="#">Contact</a>
-        </nav>
-        <nav class="h-social-links">
-            <a href="#">Tw</a>
-            <a href="#">Li</a>
-            <a href="#">Gh</a>
-        </nav>
+      <h1>Logo</h1>
+      <nav class="h-nav-links">
+        <a href="index.html">About</a>
+        <a href="#">Projects</a>
+        <a href="blog.html">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+      <nav class="h-social-links">
+        <a href="#">Tw</a>
+        <a href="#">Li</a>
+        <a href="#">Gh</a>
+      </nav>
     </header>
     <main>
-        <article>
-            <header>
-                <p>WELCOME</p>
-                <h2>What are you looking for?</h2>
-                <div class="search-bar">
-                    <input type ="search" q="googlesearch">
-                    <button>Search</button>
-                </div>
-                <p>OR CHOOSE A CATEGORY</p>
-                <ul>
-                    <li>
-                        <img src="https://picsum.photos/id/347/150/120" alt="#">
-                        <p class="icon-label">Label 1</p>
-                    </li>
-                    <li>
-                        <img src="https://picsum.photos/id/347/150/120" alt="#">
-                        <p class="icon-label">Label 1</p>
-                    </li>
-                    <li>
-                        <img src="https://picsum.photos/id/347/150/120" alt="#">
-                        <p class="icon-label">Label 1</p>
-                    </li>
-                    <li>
-                        <img src="https://picsum.photos/id/347/150/120" alt="#">
-                        <p class="icon-label">Label 1</p>
-                    </li>
-                    <li>
-                        <img src="https://picsum.photos/id/347/150/120" alt="#">
-                        <p class="icon-label">Label 1</p>
-                    </li>
-                </ul>
-            </header>
-            <div class="popular-articles">
-                <h3>Popular Articles</h3>
-                <section>
-                    <img src="https://picsum.photos/id/347/370/210" alt="#">
-                    <h4>Article Title</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-                <section>
-                        <img src="https://picsum.photos/id/347/370/210" alt="#">
-                        <h4>Article Title</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-                <section>
-                        <img src="https://picsum.photos/id/347/370/210" alt="#">
-                        <h4>Article Title</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
+      <article>
+        <header>
+          <p>WELCOME</p>
+          <h2>What are you looking for?</h2>
+          <div class="search-bar">
+            <input type="search" q="googlesearch" />
+            <button>Search</button>
+          </div>
+          <p>OR CHOOSE A CATEGORY</p>
+          <ul>
+            <li>
+              <img src="https://picsum.photos/id/347/150/120" alt="#" />
+              <p class="icon-label">Label 1</p>
+            </li>
+            <li>
+              <img src="https://picsum.photos/id/347/150/120" alt="#" />
+              <p class="icon-label">Label 1</p>
+            </li>
+            <li>
+              <img src="https://picsum.photos/id/347/150/120" alt="#" />
+              <p class="icon-label">Label 1</p>
+            </li>
+            <li>
+              <img src="https://picsum.photos/id/347/150/120" alt="#" />
+              <p class="icon-label">Label 1</p>
+            </li>
+            <li>
+              <img src="https://picsum.photos/id/347/150/120" alt="#" />
+              <p class="icon-label">Label 1</p>
+            </li>
+          </ul>
+        </header>
+        <div class="popular-articles">
+          <h3>Popular Articles</h3>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+        </div>
+        <aside>
+          <div class="outer-container">
+            <div class="left-container">
+              <p>Get involved!</p>
+              <p>Subscribe to be notified of new blog posts</p>
             </div>
-            <aside>
-                <div class="outer-container">
-                    <div class="left-container">
-                        <p>Get involved!</p>
-                        <p>Subscribe to be notified of new blog posts</p>
-                    </div>
-                    <div class="right-container">
-                        <input type="email">
-                        <button>Subscribe</button>
-                    </div>
-                </div>
-            </aside>
-            <div class="topic-one-articles">
-                <h3>Topic One Articles</h3>
-                <section>
-                    <img src="https://picsum.photos/id/347/370/210" alt="#">
-                    <h4>Article Title</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-                <section>
-                        <img src="https://picsum.photos/id/347/370/210" alt="#">
-                        <h4>Article Title</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-                <section>
-                        <img src="https://picsum.photos/id/347/370/210" alt="#">
-                        <h4>Article Title</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
+            <div class="right-container">
+              <input type="email" />
+              <button>Subscribe</button>
             </div>
-            <div class="topic-two-articles">
-                <h3>Topic Two Articles</h3>
-                <section>
-                    <img src="https://picsum.photos/id/347/370/210" alt="#">
-                    <h4>Article Title</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-                <section>
-                        <img src="https://picsum.photos/id/347/370/210" alt="#">
-                        <h4>Article Title</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-                <section>
-                        <img src="https://picsum.photos/id/347/370/210" alt="#">
-                        <h4>Article Title</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-            </div>
-            <div class="topic-three-articles">
-                <h3>Topic Three Articles</h3>
-                <section>
-                    <img src="https://picsum.photos/id/347/370/210" alt="#">
-                    <h4>Article Title</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-                <section>
-                        <img src="https://picsum.photos/id/347/370/210" alt="#">
-                        <h4>Article Title</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-                <section>
-                        <img src="https://picsum.photos/id/347/370/210" alt="#">
-                        <h4>Article Title</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eligendi pariatur dolore minima adipisci error voluptates, porro, non doloribus aliquid in earum!</p>
-                </section>
-            </div>      
-        </article>
+          </div>
+        </aside>
+        <div class="topic-one-articles">
+          <h3>Topic One Articles</h3>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+        </div>
+        <div class="topic-two-articles">
+          <h3>Topic Two Articles</h3>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+        </div>
+        <div class="topic-three-articles">
+          <h3>Topic Three Articles</h3>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+          <section>
+            <img src="https://picsum.photos/id/347/370/210" alt="#" />
+            <h4>Article Title</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate eligendi pariatur dolore minima adipisci error
+              voluptates, porro, non doloribus aliquid in earum!
+            </p>
+          </section>
+        </div>
+      </article>
     </main>
     <footer class="f-nav-toolbar">
-        <div class="f-nav-container">
-            <h1>Logo</h1>
-            <nav class="f-nav-links">
-                <a href="index.html">About</a>
-                <a href="#">Projects</a>
-                <a href="blog.html">Blog</a>
-                <a href="#">Contact</a>
-            </nav>
-            <nav class="f-social-links">
-                <a href="#">Tw</a>
-                <a href="#">Li</a>
-                <a href="#">Gh</a>
-            </nav>
-        </div>
-        <P>Copright CJ 2019</P>
+      <div class="f-nav-container">
+        <h1>Logo</h1>
+        <nav class="f-nav-links">
+          <a href="index.html">About</a>
+          <a href="#">Projects</a>
+          <a href="blog.html">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+        <nav class="f-social-links">
+          <a href="#">Tw</a>
+          <a href="#">Li</a>
+          <a href="#">Gh</a>
+        </nav>
+      </div>
+      <P>Copright CJ 2019</P>
     </footer>
-</body>
+  </body>
 </html>
