--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/index.css" />
-    <title>Chris Jones - Blog</title>
+    <title>Chris Jones</title>
   </head>
   <body>
     <header class="h-nav-toolbar">
@@ -22,7 +22,39 @@
         <a href="#">Gh</a>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="above-fold-container">
+        <div class="above-fold-upper">
+          <div class="content-container">
+            <img src="https://picsum.photos/id/955/315/380" alt="headshot" />
+            <div class="text-container">
+              <h1>Chris Jones</h1>
+              <p>Full Stack Web Developer</p>
+              <div class="contact-details">
+                <p>Phone</p>
+                <p>Email</p>
+                <div class="social-icons">
+                  <a class="gitHub" href="#"></a>
+                  <a class="linkedIn" href="#"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="above-fold-lower">
+          <h2>Hello</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+            explicabo natus commodi, molestiae nihil fuga laborum facere quas
+            officiis! Blanditiis ad nam et. Quibusdam totam maxime culpa quae
+            pariatur numquam tempore, ut, id porro est quis modi quasi dolore.
+            Molestiae iusto reprehenderit eveniet suscipit natus fuga architecto
+            doloremque dicta ducimus.
+          </p>
+          <button>Contact Me</button>
+        </div>
+      </div>
+    </main>
     <footer class="f-nav-toolbar">
       <div class="f-nav-container">
         <h1>Logo</h1>
