WIP: completed html scaffolding for index page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,63 @@
           <button>Contact Me</button>
         </div>
       </div>
+      <div class="below-fold-container">
+        <h2>Experience</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+          voluptatem ad alias quibusdam itaque commodi quos voluptas qui minus
+          neque quia aperiam praesentium non, possimus dicta blanditiis
+          perspiciatis rerum quae ab, quod tempore quas id, repellat impedit.
+          Aliquam quasi laudantium, reprehenderit fugit exercitationem atque
+          voluptates, accusamus voluptatibus provident reiciendis
+          necessitatibus.
+        </p>
+        <h3>Education</h3>
+        <h4>Lambda School</h4>
+        <p>2019-202</p>
+        <p>Placeholder text</p>
+        <h3>Emplyment</h3>
+        <h4>Job Title</h4>
+        <p>2019-202</p>
+        <p>Placeholder text</p>
+        <h4>Job Title</h4>
+        <p>2019-202</p>
+        <p>Placeholder text</p>
+        <h4>Job Title</h4>
+        <p>2019-202</p>
+        <p>Placeholder text</p>
+        <div class="projects-container">
+          <h2>Projects</h2>
+          <section class="project">
+            <div class="project-left-half"></div>
+            <div class="project-right-half"></div>
+          </section>
+          <section class="project">
+            <div class="project-left-half"></div>
+            <div class="project-right-half"></div>
+          </section>
+          <section class="project">
+            <div class="project-left-half"></div>
+            <div class="project-right-half"></div>
+          </section>
+        </div>
+        <div class="conttact-form">
+          <h2>Get in touch</h2>
+          <p>hello@chris-jones.dev</p>
+          <form name="contact" method="POST" data-netlify="true">
+            Name:<input type="text" name="name" /> E-mail:<input
+              type="text"
+              name="mail"
+            />
+
+            Message:<input type="text" name="comment" />
+            <div class="button-container">
+              <input class="button" type="submit" value="Send" />
+              <input class="rest" type="reset" value="Reset" />
+            </div>
+          </form>
+        </div>
+      </div>
     </main>
     <footer class="f-nav-toolbar">
       <div class="f-nav-container">
