WIP: completed html scaffolding for index page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="project-right-half"></div>
           </section>
         </div>
-        <div class="conttact-form">
+        <div class="contact-form">
           <h2>Get in touch</h2>
           <p>hello@chris-jones.dev</p>
           <form name="contact" method="POST" data-netlify="true">
