--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="index.js" defer></script>
     <title>Chris Jones Personal Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="h-nav-toolbar">
@@ -65,7 +66,7 @@
             </div>
           </div>
           <div class="af-left-cont-upper-lower">
-              <p>I'm a full-stack developer based in Oxford.</p>
+              <p>A full-stack developer based in Oxford.</p>
             </div>
       </div>
         <div class="af-right-cont">
